syntax = "proto3";

package protocol;

service Scheduler {
  rpc GetToken (GetTokenRequest) returns (GetTokenResponse) {
  }

  // This is inverted cause the server own the service and it sends the request
  // and the client respond.
  rpc DeploymentEvents (stream DeploymentEventResponse) returns (stream DeploymentEventRequest) {
  }
}

message GetTokenRequest {
}

message GetTokenResponse {
  string token = 1;
}

message DeploymentEventRequest {
  DeploymentEventRequestType type = 1;
  oneof request {
    AppDeploymentRequest appDeploymentRequest = 2;
  }
}

enum DeploymentEventRequestType {
  DEPLOY_APP = 0;
}

message AppDeploymentRequest {
  string appName = 1;
  string repository = 2;
}

message DeploymentEventResponse {
  DeploymentEventResponseType type = 1;
  string message = 2;
}

enum DeploymentEventResponseType {
  OK = 0;
  ERROR = 1;
}
